--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "start": "cross-env NODE_ENV=production node ./src/app.js",
     "dev": "cross-env NODE_ENV=development nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo would have built here"
+    "build": "echo would have built here",
+    "test:jest": "cross-env NODE_ENV=test jest",
+    "test:jest:watch": "cross-env NODE_ENV=test jest --detectOpenHandles"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "repository": {
     "type": "git",
@@ -23,6 +30,11 @@
   },
   "homepage": "https://github.com/odunet/zuriMongoApp#readme",
   "dependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
@@ -36,14 +48,17 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
+    "jest": "^27.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "mongodb-memory-server-core": "^6.9.6",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "supertest": "^6.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
